# CUA_midscene

./: .gitignore  AGENT.md  README.md
execution/: .env.example  README.md  SKILL.md  package-lock.json  package.json  pyproject.toml  tsconfig.build.json  tsconfig.json
execution/agents/: openai.yaml
execution/cli/: main.ts
execution/cua/: __init__.py  index.ts  package-root.ts
execution/cua/cli/: __init__.py  main.py  main.ts
execution/cua/contracts/: types.ts  validation.ts
execution/cua/conversion/: __init__.py  input_locate.py  showui-trace.ts  showui_trace.py
execution/cua/domain/: __init__.py  types.py
execution/cua/models/: __init__.py  base.py  flow.py  schema.py  task.py
execution/cua/task/: __init__.py  ai_act.py  ai_act_prompt.py  calibration.py  data-paths.ts  data_paths.py  execution.ts  executor.py  inputs.py  inputs.ts  io.py  projects.py  resolver.py  tasks.ts  yaml-task.ts  yaml_task.py
execution/executors/: ai-act-prompt.ts  computer-agent.ts  env.ts  generate-resolved-flow-contract.ts  midscene-yaml.ts  resolved-flow-contract.ts  run-midscene-ai-act.ts  run-midscene-flow.ts  run-midscene-yaml.ts
execution/projects/browser-demo/: SKILL.md  (+1 more)
execution/references/: task-contract.md
execution/schemas/: ai-act-result.schema.json  calibration-proposal.schema.json  execution-result.schema.json  flow-overrides.schema.json  midscene-flow.schema.json  processed-log.schema.json  project.schema.json  resolved-flow.schema.json  scene.schema.json  showui-trace.schema.json  task.schema.json
execution/src/: env.ts
execution/tests/: all.test.ts
(+225 files in other folders)
